# octoscraper

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
configuration/: configuration.json
src/: configuration.rs  main.rs  mod.rs  page_processor.rs  resource_downloader.rs  structs.rs  validators.rs
src/service/: default_settings.rs  download_service.rs  file_service.rs  link_normalizer_service.rs  link_service.rs  link_strategy_service.rs  mod.rs  page_processor_service.rs  printer_service.rs  resource_extractor_service.rs  validation_service.rs
src/service/extractor/: extractor_service.rs  mod.rs  resource_extractor.rs
src/service/extractor/extractors/: audio_extractor.rs  audio_link_extractor.rs  image_extractor.rs  image_link_extractor.rs  link_extractor.rs  link_extractor_service.rs  mod.rs  other_extractor.rs  other_link_extractor.rs  resource_extractor.rs  video_extractor.rs  video_link_extractor.rs
src/service/strategy_extractor/: mod.rs  strategy_audio_extractor.rs  strategy_extractor_service.rs  strategy_image_extractor.rs  strategy_resource_extractor.rs  strategy_video_extractor.rs
src/service/strategy_extractor/strategies/: mod.rs  (+3 more)
src/services/: mod.rs  page_processor_service.rs  resource_downloader_service.rs  validation_service.rs
src/structure/: application_settings.rs  config_struct.rs  domain_filter_struct.rs  extension_filter_struct.rs  mod.rs  processed_hash_struct.rs  processed_struct.rs
src/util/: env_util.rs  file_util.rs  help_util.rs  link_util.rs  mod.rs  settings_util.rs  validation_util.rs
