[package]
name = "octoscraper"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
select = "0.6.0"
num_cpus = "1.15.0"
rand="0.8.5"
config-file = {version = "0.2.3", features=[ "json"]}
serde = { version = "1.0.158", features = ["derive"] }
log = "0.4.17"
env_logger="0.10.0"
crossterm = "0.26.1"