[package]
name = "octoscraper"
description = "A web scraper tool"
license = "MIT"
version = "0.4.7"
edition = "2021"
authors=["Andrei Dodu"]

[dependencies]
reqwest = { version = "0.11.15"}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
select = "0.6.0"
rand = "0.8.5"
config-file = {version = "0.2.3", features=[ "json"]}
serde = { version = "1.0.158", features = ["derive"] }
sha2 = "0.10"
hex = "0.4.3"
url-normalizer = "0.2.0"